# av_transcoder

./: CMakeLists.txt  README.md  main.cpp
cmake/: ffmpeg.cmake
sample/: CMakeLists.txt  sample_mp4_to_yuvpcm.cpp  sample_video_decode.cpp  sample_video_encode.cpp  sample_yuvpcm_to_mp4.cpp
src/ffmpeg/: ffmpeg_common.h
src/rtpencoder/: rtpencoder.cpp
src/util/: util.h
